<resources>
    <string name="app_name">Educader</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="electrical">BASIC ELECTRICAL ENGINEERING</string>
    <string name="math">ENGINEERING MATHMATICS-1</string>
    <string name="chemistry">ENGINEERING CHEMISTRY</string>
    <string name="program">PROGRAMMING FOR PROBLEM SOLVING</string>
    <string name="graphics">ENGINEERING GRAPHICS AND DESIGN</string>
    <string name="physics">ENGINEERING PHYSICS</string>
    <string name="math2">ENGINEERING MATHMATICS-2</string>
    <string name="english">PROFESSIONAL ENGLISH</string>
    <string name="SOFTWARE">SOFTWARE ENGINEERING</string>
    <string name="DATASTRC">DATA STRUCTURE</string>
    <string name="MICRO">INTRODUCTION TO MICROPROCESSOR</string>
    <string name="DLD">DIGITAL LOGIC DESIGN</string>
    <string name="TUFFEL">THEORY OF AUTOMETA AND FORMAL LANGUAGES</string>
    <string name="DISCRETE">DISCRETE STRUCTURE AND THEORY OF LOGIC </string>
    <string name="OS">OPERATING SYSTEM</string>
    <string name="MATHS3">MATHS 3</string>
    <string name="HUMANVALUE">UNIVERSAL HUMAN VALUES</string>
    <string name="COA">COMPUTER ORGANIZATION AND ARCHITECTURE</string>
    <string name="PPL">PRINCIPAL OF PROGRAMING LANGUAGE</string>
    <string name="GRAPHICS">COMPUTER GRAPHICS</string>
    <string name="NETWORK">COMPUTER NETWORKS</string>
    <string name="WT">WEB TECHNOLOGY</string>
    <string name="INDUSTRIAL">INDUSTRIAL MANAGEMENT</string>
    <string name="CYBER">CYBER SECURITY</string>
    <string name="DBMS">DATABASE MANAGEMENT SYSTEM</string>
    <string name="ECONOMICS">MANAGERIAL ECONOMICS</string>
    <string name="COMPILER">COMPILER DESIGN</string>
    <string name="SOCIOLOGY">INDUSTRIAL SOCIOLOGY</string>
    <string name="DAA">DESIGN AND ANALYSIS OF ALGORITHMS</string>
    <string name="DATAMINING">DATA WAREHOUSING AND DATA MINING</string>
    <string name="SCIENCE_ME"> ENGINEERING SCIENCE COURSE</string>
    <string name="scope">Career in IT is considered one of the most high-paying jobs and is full of opportunities; particularly when India s prowess in information technology industry is recognized across the globe. The pool of talented computer engineers working in IT companies of the USA and Canada shows that IT can take a person to higher levels. Numerous IT companies from India employ huge number of computer professionals in their Indian and overseas offices.</string>
    <string name="STEP">A BTech or BCA/MCA can become an IT engineer. And a person requires +2 with mathematics to pursue BTech or BCA. Others without mathematics too can do various short term certification and diploma courses in various small packages. However, there is a stringent selection procedure at place for computer engineers wherein admission to the BE/ BTech courses is extremely competitive. An internship program at Various IT companies would garner practical knowledge and employability and it is a must and can be either after or during the course.
 </string>
    <string name="start"> Candidates willing to excel in computer engineering should have sound command over mathematics and science to clear entrance exam conducted soon after 12th class. Advanced knowledge of chemistry and physics would help the candidates get through  the entrance exam conducted by engineering colleges in India. Candidates who wish to do BE / BTech in Computer Engineering must have passed 10+2 or equivalent examination, with Physics, Chemistry and Mathematics. Similarly, those who wish to do Diploma in Computer Engineering must have passed 10 + 2 with Science Subjects. Candidates may opt for M.E/ M. Tech in Computer Science for further specialization in Computer Science.
</string>
    <string name="QUESTION">Depending upon the interest the career in IT can be chosen. Those who love programming and coding can do software engineering and those who prefer networking and system administration, can do hardware engineering. IT sector is quite broad in terms of employment and job options. Roles are varieties for Computer engineers in IT sector, but their primary role is to apply the knowledge of mathematics and science to design and develop software to be used by clients or users. There are network engineers, system management professionals besides the computer engineers. Computer software engineers have bright career prospects as the application of software and dependency on it in various walks of life are increasing.
</string>
    <string name="Cost">Studying Information Technology can cost a lot in private engineering colleges. However, government sponsored engineering colleges charge comparatively low. IITs charge from Rs 2,00,000 to Rs 2,70,000, but the fee depends upon the rank of engineering college and reputation. Diploma programs on the other hand cost less and a diploma in computer application can be done at 50,000.
</string>
    <string name="funding">A number of scholarships are available for computer science students. One such scholarship is the Paul Foundation Scholarships and is offered to study BTech and MTech in computer science. Candidates with outstanding academic records are eligible for it.  The NTPC Scholarship for Disabled or Handicapped Engineering Students is also there for students who have some kind of handicap including of visual, hearing or orthopedic.
Students willing to do research in computer science can apply for the Young Engineering Fellowship Program which is offered to students of BTech who are willing to do summer projects conducted by the Indian Institute of Science in Bangalore. Students in third year of any type of engineering degree are applicable for it.
</string>
    <string name="job">Booming IT sector in India has plenty of jobs for fresh computer science graduates. Candidates from top notch engineering colleges however get attractive job offers from MNC IT companies in comparison to not so known engineering colleges. Additionally, candidates with high percentage of mark and good communication skills as well as sound computer knowledge do not face problem in getting a job whether they are from a reputed engineering college or not. Computer engineers can get jobs in non-IT companies like universities, research, private and public industries, government departments, business organisations, commercial organisations and the manufacturing sector, etc.
Besides the Computer Engineers have plenty of options to work in IT companies in departments such as design, development, assembly, manufacture and maintenance, etc. Working as programmer, web developer, and E- commerce specialist with telecommunications companies, automotive companies, aerospace companies, etc. can be a lucrative career option as well. Moreover, numerous national and multi-national computer manufacturing companies, computer hardware system design and development companies, computer networking companies, software development companies, etc. require computer professionals in large numbers.
</string>
    <string name="packet">It is the attraction of higher salaries in IT sector which urges youngsters to opt for a course in computer science. In comparison to other sector, computer science graduates fetch higher salaries from INR 15,000 – 25,000 in the beginning. After gaining +2 years of work experience, they can get a salary of INR 40000. Candidates who get opportunities to work in overseas project get numerous benefits and incentives which may even go to six figures. However, the salary depends a lot upon some factors such as the state of the industry, work experience, qualifications and ability of the candidate, etc. amongst others. Computer Science graduates who are in teaching can fetch a salary of INR 20000 plus dearness allowances and other benefits.
</string>
    <string name="demand">True to its global reputation, the Indian IT sector has lots of scope in terms of growth in employment opportunities. A huge requirement of trained IT engineers is expected in next couple of years. While according to NASSCOM, the Indian IT exports are expected to expand to the tune of US$ 175 billion by 2020 and the domestic sector will account for US$ 50 billion in terms of earnings. Similarly, a huge quantum of profit is expected  from the export and domestic IT sector which would be worth US$ 225 billion.
</string>
    <string name="Market">Widening scope for computer science professionals can be prophesied from the fact that after the recession is over, new jobs would come in large numbers in IT sector. Moreover, with low service cost Indian IT companies have leverage over IT companies in the USA, Canada, and Australia. The low cost Indian IT service attract lot more business even during recession as companies in developed nations try to reduce their production cost and outsource their IT work to Indian IT firms.</string>
    <string name="International">IT sector can truly be considered a global career in terms of its wide scope for professionals. India has been one of the leading exporters of IT talent and Indian computer engineers have played major role in the growth and development of IT sector in the USA, UK, Australia, and Canada. Numbers of employment opportunities are waiting for Indian computer professionals in these countries. Some new avenues too are being opened for Indian computer professionals in Dubai, Singapore, Bangkok, etc. Thanks to global demand for IT services, which is around USD $70 trillion for many new and exciting international careers are opened up for computer professionals.</string>
    <string name="Positives">Despite the fact that recent recession showed the worse days for computer engineers, a great hope still persists for Indian computer science professionals for the reason that India has potential to offer IT services at the fraction of the cost of the USA software developing companies. India has advantage in terms of IT professionals as it produces more in numbers than Western countries; therefore, the demand can be filled only with Indian professionals who are par excellence vis-a-vis computer professionals of the West. Indian IT companies such as Wipro, Infosys, TCS, Patni, HCL, etc. have been able to garner gains even during the recession and have hired a number of computer professionals.
</string>
    <string name="Different">• Software Developers: Software developers are professionals who are concerned with facets of the software development process which involves activities such as design and coding, computer programming, project management, etc.
• Hardware Engineers: These professionals do research, design, develop, test, and oversee the installation of computer hardware which inter alia includes computer chips, circuit boards, systems, modems, keyboards, and printers.
• System Designer: Professionals involved in system designing, Logical and Physical Designing wherein logical designing can be enumerated as the structure and characteristics such as output, input, files, database and procedures, etc.
• System Analyst: Computer engineers who work as systems analyst do research about the existing problems and plan solutions for the problem. They also recommend software and system related problems and coordinate development between business development teams. 
• Networking Engineers: Networking engineers are computer professionals involved in designing, implementation, and troubleshooting of computer networks.
• DBA: DBA or Database Administrator are the professionals who are bestowed with the job to design, implement, maintain, and repair an organization database. Inter alia DBA professionals are also known as Database Coordinator or Database Programmer in IT sector.
</string>
</resources>